# fullstack-movie-search

./: .editorconfig  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  report.md  run_api.sh  run_script.sh
.github/workflows/: CI.yml
DS_webApp/: app.py  pyproject.toml
config/: workflow.yaml
ds_webapp/: api.py  app.py  dockerfile  movie_utils.py  pyproject.toml  schemas.py
ds_webapp/consume_api/: consume_api.py  movie_utils.py  schemas.py  utils.py
ds_webapp/database/: connect.py  tables.py
ds_webapp/ds_webapp/: api.py  app.py
ds_webapp/ds_webapp/api_client/: schemas.py  tmdb_client.py  utils.py
ds_webapp/ds_webapp/authentication/: authentication.py
ds_webapp/ds_webapp/consume_api/: consume_api.py  utils.py
ds_webapp/ds_webapp/database/: connect.py  tables.py
ds_webapp/ds_webapp/tests/: conftest.py  test_connect.py  test_consume_api.py  test_movie_list.json  test_movie_utils.py  test_tables.py
ds_webapp/tests/: conftest.py  fixtures.py  test_app.py  test_authentication.py  test_connect.py  test_movie_utils.py  test_tables.py
init-db/: init-db.sql
ui/: dockerfile  package-lock.json  package.json  tsconfig.json
ui-vite/: .dockerignore  dockerfile  index.html  package-lock.json  package.json
ui-vite/src/: App.tsx
ui-vite/src/api/: authApi.ts  movieApi.ts
ui-vite/src/components/: AddToFavoritesButton.tsx  DiscoverTab.tsx  FavoritesTab.tsx  List.tsx  ListItem.tsx  LoginBox.tsx  PlusButton.tsx  SearchTab.tsx
ui-vite/src/components/bars/: sideBar.tsx
ui-vite/src/components/buttons/: AddToFavoritesButton.tsx
ui-vite/src/components/list/: List.tsx  ListItem.tsx
ui-vite/src/components/login/: LoginBox.tsx  Token.tsx
ui-vite/src/components/tabs/: FavoritesTab.tsx  PopularTab.tsx  SearchTab.tsx
ui-vite/src/interfaces/: index.ts
ui-vite/src/redux/: favorites-slice.ts  favorites-thunks.ts  store.ts
ui-vite/src/utils/: chart.tsx
ui/components/: DiscoverTab.tsx  FavoritesTab.tsx  Layout.tsx  List.tsx  ListItem.tsx  LoginBox.tsx  PlusButton.tsx  SearchTab.tsx  Title.tsx  Token.tsx  discoverTab.tsx  scrollableList.module.css  sideBar.tsx
ui/interfaces/: index.ts
ui/pages/: index.tsx
ui/pages/api/: backend-proxy.ts
ui/redux/: favorites-slice.ts
ui/utils/: api-utils.ts  chart.tsx
(+10 files in other folders)
